--- a/public/stylesheet2.css
+++ b/public/stylesheet2.css
@@ -102,7 +102,8 @@ body {
 .buddy_type {
   display: flex;
   flex: 1;
-  background-color: #6600FF;
+  background-color: #6200EA;
+  color: white;
   margin: 2%;
   width: 90%;
   border-radius: 10px;
@@ -221,15 +222,20 @@ body {
   flex-direction: column;
   background: white;
   margin: 5%;
+  border-radius: 16px;
+  padding-bottom: 10px;
+  width: 738px;
   /* border-style: 1px solid black; */
 }
 
 #buddy_1 {
   flex: 1;
+  text-align: center;
 }
 
 #buddy_2 {
   flex: 1;
+  text-align: center;
 }
 
 .profile_container {
@@ -237,5 +243,80 @@ body {
 }
 
 #profile img {
-  
+
+}
+
+#buddybutton {
+  background-color: #6200EA;
+  color: white;
+  border: 2px solid grey;
+  padding: 12px 24px;
+  border-radius: 8px;
+  font-weight: bold;
+}
+
+#buddybutton:active {
+  background-color: white;
+  color: #6200EA;
+}
+
+#criteria_container{
+  margin:5%;
+  flex:1;
+  background-color:white;
+  border-radius: 16px;
+  padding: 20px;
+  padding-bottom: 20px;
+  width: 700px;
+}
+
+.gender_buttons{
+  padding-bottom: 10px;
+}
+
+.age_buttons{
+  padding-bottom: 10px;
+}
+
+.nationality_buttons{
+  padding-bottom: 10px;
+}
+
+#genderbutton{
+  background-color: #FFFFFF;
+  color: grey;
+  border: 2px solid grey;
+  padding: 12px 24px;
+  border-radius: 8px;
+  font-weight: bold;
+}
+
+#genderbutton:active{
+  background: grey;
+  color: white;
+}
+
+
+#agebutton{
+  background-color: #FFFFFF;
+  color: grey;
+  border: 2px solid grey;
+  padding: 12px 24px;
+  border-radius: 4px;
+  font-weight: bold;
+}
+
+#agebutton:active{
+  background: grey;
+  color: white;
+}
+
+.selection-2{
+  border: 4px solid grey;
+  font-weight: bold;
+  color: grey;
+  border-radius:4px;
+  border:1px solid #AAAAAA;
+  width: 150px;
+  height: 40px;
 }
